# example-qtwidgets-qtquick

./: .gitignore  CMakeLists.txt  README.md  example.exe.manifest
resources/: ColorPicker.qml  resources.qrc
src/: ColorPicker.cpp  ColorPicker.h  Window.cpp  Window.h  main.cpp
